style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  height: 100%;
  width: 100%;
  background-image: url(martin-martz-qqyUN78RmgI-unsplash.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  
}
body {
  /* min-height: 100vh; */
  width: 100%;
  height: 100%;
  display: grid;
  align-items: center;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.calculator {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(1, 10, 15, 0.95);
  width: 240px;
  height: 480px;
  border-radius: 10px;
}

.display {
  color: beige;
  font-size: 32px;
  font-family: 'Gabarito';
  margin-top: 80px;
  width: 204px;
  display: flex;
  flex-direction: column;
  align-items: end;
  margin-bottom: 24px;
  overflow: hidden;
}

.calculations {
  font-size: 30px;
  height: 30px;
  color: rgb(245, 245, 220, 0.8);
  margin-bottom: 10px;
  caret-color: transparent;
  outline: none;
}

.result {
  height: 32px;
}
.button-container {
  display: flex;
}

button {
  font-family: 'Gabarito';
  font-size: 28px;
  height: 46px;
  width: 46px;
  border-radius: 4px;
  border: none;
  margin: 4px 2px 4px 2px;
  background-color: rgb(1, 10, 15);
  color: beige;
  box-shadow: -1px -1px 7px rgb(245, 245, 220, 0.1), 2px 2px 3px 2px black;
}

button:focus {
  outline: none;
}

.double-size-button {
  width: 100px;
}

.fa-solid {
  color: beige;
  font-size: 20px; 
}

